--- a/data/rules.yml
+++ b/data/rules.yml
@@ -62,41 +62,31 @@ rules:
     - active_loop: turno_form
 
 # ===============================
-# MOTOR DIFUSO - REGLAS
+# MOTOR DIFUSO - ÚNICA REGLA
 # ===============================
-- rule: Activar motor difuso sin utterance
+- rule: Activar motor difuso
   steps:
     - intent: frase_ambigua
     - action: action_recomendar_horario_fuzzy
 
 # ===============================
-# CONSULTA DE TURNO EXISTENTE
-# ===============================
-- rule: Consultar turno existente
-  steps:
-    - intent: consultar_turno
-    - action: action_consultar_turno_existente
-
-# ===============================
-# OTRAS CONSULTAS
+# CONSULTAS - SIN UTTERANCES DUPLICADOS
 # ===============================
 - rule: Consultar disponibilidad
   steps:
     - intent: consultar_disponibilidad
     - action: action_consultar_disponibilidad
-    - action: utter_consultar_disponibilidad
+
+- rule: Consultar turno existente
+  steps:
+    - intent: consultar_turno
+    - action: action_consultar_turno_existente
 
 - rule: Procesar datos completos de turno
   steps:
     - intent: proporcionar_datos_turno
     - action: turno_form
     - active_loop: turno_form
-
-- rule: Responder a frase ambigua
-  steps:
-    - intent: frase_ambigua
-    - action: utter_frase_ambigua
-    - action: action_recomendar_horario_fuzzy
 
 # ===============================
 # CANCELACIÓN DE TURNOS
@@ -247,7 +237,6 @@ rules:
     - intent: frase_ambigua
     - action: action_recomendar_horario_fuzzy
     - action: turno_form
-    - active_loop: turno_form
 
 - rule: Interrupción con consulta disponibilidad durante formulario
   condition:
@@ -256,7 +245,6 @@ rules:
     - intent: consultar_disponibilidad
     - action: action_consultar_disponibilidad
     - action: turno_form
-    - active_loop: turno_form
 
 - rule: Interrupción con consulta requisitos durante formulario
   condition:
@@ -265,7 +253,6 @@ rules:
     - intent: consultar_requisitos
     - action: utter_consultar_requisitos
     - action: turno_form
-    - active_loop: turno_form
 
 - rule: Interrupción con consulta requisitos primera vez durante formulario
   condition:
@@ -274,43 +261,6 @@ rules:
     - intent: consultar_requisitos_primera_vez
     - action: utter_consultar_requisitos_primera_vez
     - action: turno_form
-    - active_loop: turno_form
-
-# ===============================
-# ACCIONES POSTERIORES A GUARDAR TURNO
-# ===============================
-- rule: Mostrar mensaje exitoso después de guardar
-  steps:
-    - action: action_guardar_turno
-    - action: utter_turno_guardado_exitosamente
-
-- rule: Manejar error al guardar turno
-  steps:
-    - action: action_guardar_turno
-    - slot_was_set:
-        - turno_guardado: false
-    - action: utter_error_guardando_turno
-
-# ===============================
-# MANEJO DE HORARIOS NO DISPONIBLES
-# ===============================
-- rule: Horario no disponible
-  condition:
-    - slot_was_set:
-        - horario_disponible: false
-  steps:
-    - action: utter_horario_no_disponible
-    - action: utter_recomendar_horario
-
-# ===============================
-# CONFIRMACIÓN DE TURNO ALTERNATIVAS
-# ===============================
-- rule: Mostrar confirmación de turno
-  condition:
-    - slot_was_set:
-        - turno_confirmado: pending
-  steps:
-    - action: utter_confirmar_turno
 
 # ===============================
 # RESTART CONVERSATION
@@ -318,5 +268,4 @@ rules:
 - rule: Restart conversation
   steps:
     - intent: restart
-    - action: utter_restart
     - action: action_restart
